2001-12-02  Bernhard Held  <bernhard@bernhardheld.de>

	* src/mcs51/gen.c (genFunction): avoid excess "inc sp"

2001-11-25  Michael Hope  <michaelh@juju.net.nz>
	* support/regression/tests/bug-485362.c: Added.

	* support/regression/tests/simplefloat.c (testDivNearOne): Added.

	* src/z80/gen.c (aopOp): Fixed case where left and result are in the same spill loc and they have different sizes.

	* src/z80/peeph.def: Added rules for optimising two byte compares on the same thing, and to optimise two ptr assign.

	* src/z80/gen.c (aopDump): Added a dump function.

2001-11-25  Bernhard Held  <bernhard@bernhardheld.de>
	* sim/ucsim/s51.src/glob.cc: DS390 SFRs and bits added.

	* sim/ucsim/s51.src/port.cc: Port 4 and 5 added.

	* sim/ucsim/s51.src/regs51.h: DS390 SFRs added.

	* sim/ucsim/s51.src/uc390.cc: Some details improved, CKRDY works for tinibios.

	* sim/ucsim/s51.src/uc390cl.h: Work in progress.

	* sim/ucsim/sim.src/uccl.h: 6 ports for DS390.

	* support/regression/fwk/lib/testfwk.c: Run with tinibios.

	* support/regression/ports/mcs51/spec.mk: Fine tuninig.

	* support/regression/ports/ds390/support.c: Use tinibios.

	* support/regression/ports/ds390/spec.mk: Fine tuning, use tinibios.

2001-11-23  Michael Hope  <michaelh@juju.net.nz>support/regression/tests/bug-460010.c

	* src/z80/ralloc.c (packRegsForHLUse3): Changed to not pack into HL if anything is in direct space.
	(packRegsForHLUse3): Added packing support for send, cast, and return value from a call.

	* src/z80/peeph.def: Added rules for optimising pushes of part of a pair.

	* src/z80/gen.c (emitCall): Changed the stack fixup to not use HL.

2001-11-18  Michael Hope  <michaelh@juju.net.nz>

	* src/z80/gen.c (genCmp): Fixed compare on unsigned.

	* src/z80/ralloc.c (packRegsForHLUse3): Created and optimised.
	(packRegsForIYUse): Created and optimised.

2001-11-07  Michael Hope  <michaelh@juju.net.nz>

	* support/regression/tests/float.c (testFloatAdd): Fixed up warning.